sandbox/output
Medicine.java:2: error: cannot find symbol
    public Medicine(String name, Set<Prescription> prescriptions) {
                                 ^
  symbol:   class Set
  location: class Medicine
1 error
